--- a/Client/Pattern.vcxproj.filters
+++ b/Client/Pattern.vcxproj.filters
@@ -163,6 +163,8 @@
       <Filter>Resource Files</Filter>
     </None>
     <None Include="packages.config" />
+    <None Include="ClassDiagram.cd" />
+    <None Include="ClassDiagram1.cd" />
   </ItemGroup>
   <ItemGroup>
     <Image Include="res\Pattern.ico">
